--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "framer-motion": "^11.0.8",
-    "@reduxjs/toolkit": "^2.2.1",
-    "react-redux": "^9.1.0",
-    "axios": "^1.6.7",
     "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.8.1",
     "react-query": "^3.39.3",
-    "date-fns": "^3.3.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
