--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "next": "^15.2.0",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.8.1",
     "react-query": "^3.39.3",
@@ -28,6 +31,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-dropzone": "^4.2.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
